--- a/templates/base.html
+++ b/templates/base.html
@@ -5,12 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>{% block title %}{% endblock %}</title>
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      href="{{ url_for('static', filename='vendor/bootstrap-5.3.2/bootstrap.min.css') }}"
       rel="stylesheet"
-      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-      crossorigin="anonymous"
     />
-    <link href="{{ url_for('static', filename='base.css')}}" rel="stylesheet">
+    <link href="{{ url_for('static', filename='base.css') }}" rel="stylesheet">
   </head>
   <body>
     <nav class="navbar fixed-top navbar-expand-lg bg-body-tertiary">
@@ -45,9 +43,7 @@
 
     <main class="container">{% block content %}{% endblock %}</main>
     <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-      crossorigin="anonymous"
+      src="{{ url_for('static', filename='vendor/bootstrap-5.3.2/bootstrap.bundle.min.js') }}"
     ></script>
   </body>
 </html>
