--- a/templates/base.html
+++ b/templates/base.html
@@ -9,9 +9,13 @@
       rel="stylesheet"
     />
     <link href="{{ url_for('static', filename='base.css') }}" rel="stylesheet">
+    <script defer src="{{ url_for('static', filename='vendor/alpinejs/alpinejs.min.js') }}"></script>
   </head>
   <body>
-    <nav class="navbar fixed-top navbar-expand-lg bg-body-tertiary">
+    <nav
+      hx-boost="true"
+      class="navbar fixed-top navbar-expand-lg bg-dark border-bottom border-body" data-bs-theme="dark"
+    >
       <div class="container-fluid">
         <a class="navbar-brand" href="/">Appointment Scheduler</a>
         <button
@@ -28,13 +32,28 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('doctors') }}">Doctors</a>
+                <a
+                  class="nav-link {% if active == 'doctors' %}active{% endif %}"
+                  href="{{ url_for('doctors') }}"
+                >
+                    Doctors
+                </a>
               </li>
             <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('patients') }}">Patients</a>
+              <a
+                class="nav-link {% if active == 'patients' %}active{% endif %}"
+                href="{{ url_for('patients') }}"
+              >
+                Patients
+              </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('appointments') }}">Appointments</a>
+              <a
+                class="nav-link {% if active == 'appointments' %}active{% endif %}"
+                href="{{ url_for('appointments') }}"
+              >
+                Appointments
+              </a>
             </li>
           </ul>
         </div>
@@ -45,5 +64,6 @@
     <script
       src="{{ url_for('static', filename='vendor/bootstrap-5.3.2/bootstrap.bundle.min.js') }}"
     ></script>
+    <script src="{{ url_for('static', filename='vendor/htmx/htmx.min.js') }}"></script>
   </body>
 </html>
