--- a/templates/home.html
+++ b/templates/home.html
@@ -5,5 +5,15 @@ Home
 {% endblock title %}
 
 {% block content %}
-<p>Hello, {{ name }}!</p>
+<h1 x-data="{ message: 'I ❤️ Alpine' }" x-text="message"></h1>
+<!-- have a button POST a click via AJAX -->
+<div style="height: 50px;">
+    <button type="button"
+        class="btn btn-primary"
+        style="width: 200px;"
+        hx-post="/clicked" hx-swap="innerHTML"
+    >
+        Click Me
+    </button>
+</div>
 {% endblock content %}
