--- a/templates/appointments.html
+++ b/templates/appointments.html
@@ -4,6 +4,6 @@
 Appointments
 {% endblock title %}
 
-{% block content %}
+{% block data %}
 <p>Hello, {{ name }}!</p>
-{% endblock content %}
+{% endblock data %}
