--- a/static/base.css
+++ b/static/base.css
@@ -1,3 +1,29 @@
 main {
     margin-top: 60px;
 }
+
+#topbar-area {
+    display: block;
+    overflow-y: auto;
+    padding: 4px;
+    height: 80px
+}
+
+#middle-area {
+    display: flex;
+    flex-direction: row;
+}
+
+#data-area {
+    width: 75%;
+    overflow-y: auto;
+    padding: 4px;
+    height: calc(100vh - 150px);
+}
+
+#controls-area {
+    width: 25%;
+    overflow-y: auto;
+    padding: 4px;
+    height: calc(100vh - 150px);
+}
