--- a/templates/base.html
+++ b/templates/base.html
@@ -4,66 +4,49 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>{% block title %}{% endblock %}</title>
+    
+    <!-- Bootstrap CSS -->
     <link
       href="{{ url_for('static', filename='vendor/bootstrap-5.3.2/bootstrap.min.css') }}"
       rel="stylesheet"
     />
+    
+    <!-- My CSS -->
     <link href="{{ url_for('static', filename='base.css') }}" rel="stylesheet">
+    
+    <!-- Alpine JS -->
     <script defer src="{{ url_for('static', filename='vendor/alpinejs/alpinejs.min.js') }}"></script>
   </head>
   <body>
-    <nav
-      hx-boost="true"
-      class="navbar fixed-top navbar-expand-lg bg-dark border-bottom border-body" data-bs-theme="dark"
-    >
-      <div class="container-fluid">
-        <a class="navbar-brand" href="/">Appointment Scheduler</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-                <a
-                  class="nav-link {% if active == 'doctors' %}active{% endif %}"
-                  href="{{ url_for('doctors') }}"
-                >
-                    Doctors
-                </a>
-              </li>
-            <li class="nav-item">
-              <a
-                class="nav-link {% if active == 'patients' %}active{% endif %}"
-                href="{{ url_for('patients') }}"
-              >
-                Patients
-              </a>
-            </li>
-            <li class="nav-item">
-              <a
-                class="nav-link {% if active == 'appointments' %}active{% endif %}"
-                href="{{ url_for('appointments') }}"
-              >
-                Appointments
-              </a>
-            </li>
-          </ul>
+
+    <!-- Navbar -->
+    {% include 'navbar.html' %}
+
+    <!-- Main -->
+    <main class="container-fluid">
+      
+      <!-- Topbar -->
+      <div id="topbar-area">
+        {% block topbar %}{% endblock %}
+      </div>
+      
+      <!-- Data and Controls -->
+      <div id="middle-area">
+        <div id="data-area">
+          {% block data %}{% endblock %}
+        </div>
+        <div id="controls-area">
+          {% block controls %}{% endblock %}
         </div>
       </div>
-    </nav>
-
-    <main class="container">{% block content %}{% endblock %}</main>
+    </main>
+    
+    <!-- Bootstrap JS -->
     <script
       src="{{ url_for('static', filename='vendor/bootstrap-5.3.2/bootstrap.bundle.min.js') }}"
     ></script>
+
+    <!-- HTMX -->
     <script src="{{ url_for('static', filename='vendor/htmx/htmx.min.js') }}"></script>
   </body>
 </html>
