--- a/templates/doctors.html
+++ b/templates/doctors.html
@@ -5,52 +5,9 @@ Doctors
 {% endblock title %}
 
 {% block topbar %}
-<div class="container-fluid" style="height: 100%;">
-    <div class="row align-items-center justify-content-start" style="height: 100%;">
-        <div class="col-auto">
-            <h2>Doctors</h2>
-        </div>
-        <div class="col-auto">
-            <button type="button" class="btn btn-primary">New</button>
-        </div>
-    </div>
-</div>
+{% include 'components/doctors/topbar.html' %}
 {% endblock topbar %}
 
 {% block data %}
-<table class="table table-striped table-hover" style="vertical-align: middle;">
-    <thead>
-        <tr>
-            <th style="width: 35%;">Doctor name</th>
-            <th style="width: 10%;">Age</th>
-            <th style="width: 10%;">Gender</th>
-            <th>Contact number</th>
-            <th style="width: 150px;"></th>
-        </tr>
-    </thead>
-    <tbody>
-        {% for doctor in doctor_data %}
-            <tr>
-                <td>
-                    {{ doctor.name }}
-                </td>
-                <td>
-                    {{ doctor.age }}
-                </td>
-                <td>
-                    {{ doctor.gender }}
-                </td>
-                <td>
-                    {{ doctor.contact_number }}
-                </td>
-                <td>
-                    <div class="btn-group" role="group">
-                        <button type="button" class="btn btn-primary">Edit</button>
-                        <button type="button" class="btn btn-danger">Delete</button>
-                    </div>
-                </td>
-            </tr>
-        {% endfor %}
-    </tbody>
-</table>
+{% include 'components/doctors/data.html' %}
 {% endblock data %}
