--- a/templates/components/doctors/data.html
+++ b/templates/components/doctors/data.html
@@ -26,7 +26,17 @@
                 <td>
                     <div class="btn-group" role="group">
                         <button type="button" class="btn btn-primary">Edit</button>
-                        <button type="button" class="btn btn-danger">Delete</button>
+                        <button
+                            type="button"
+                            class="btn btn-danger"
+                            hx-post="/delete_doctor"
+                            hx-target="#data-area"
+                            hx-swap="innerHTML"
+                            name="doctor_id"
+                            value="{{ doctor.doctor_id }}"
+                        >
+                            Delete
+                        </button>
                     </div>
                 </td>
             </tr>
